--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ author:
   avatar           : "profile.jpeg"
   name             : "Arka Bhattacharya"
   pronouns         : "he/him"  
-  bio              : "Short biography for the left-hand sidebar"
+  bio              : "Phd Student"
   location         : "New York, NY"
   employer         : "Cornell Tech"
   uri              : # URL
